# agent-finops

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  vercel.json
.cursor/skills/governed-ai-stack/: SKILL.md
.github/workflows/: ci.yml  deploy.yml
demo/: app.js  architect-config.js  architect-panel.js  config.js  glassbox.js  index.html  styles.css
deploy/terraform/gcp/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf
deploy/terraform/gcp/scripts/: capture_receipt.sh
docs/: ARCHITECTURE.md  PRODUCT.md  SLO.md
docs/adr/: 0001-standalone-cost-governance-service.md  0002-paas-vs-iac-deploy-tradeoffs.md
sdk/python/agent_finops_client/: __init__.py  client.py
src/agent_finops/: __init__.py  models.py  pricing.py  store.py
src/agent_finops/api/: main.py
tests/: test_api.py  test_outcomes_kpi.py  test_pricing.py  test_sdk_client.py  test_sdk_outcomes.py  test_store.py
