[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-finops"
version = "0.1.0"
description = "Real, enforced cost governance for AI agent fleets — usage metering, budgets, and breach signals as a shared service."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Venkata Peetla" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0"]
postgres = ["psycopg[binary]>=3.1"]

[tool.setuptools.packages.find]
where = ["src", "sdk/python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "sdk/python"]
asyncio_mode = "auto"
